--- a/src/app/food-list/food-list.component.html
+++ b/src/app/food-list/food-list.component.html
@@ -2,6 +2,13 @@
     <div class="col-sm-10">
         <app-food-edit></app-food-edit>
         <hr/>
-        <p>The list is going here</p>
+        
+        <ul class="list-group">
+            <a *ngFor="let food of foodList"
+                class="list-group-item" 
+                style="cursor: pointer;">
+                {{ food.name }} ({{ food.amount }})
+            </a>
+        </ul>
     </div>
 </div>
