--- a/src/app/food-list/food-edit/food-edit.component.html
+++ b/src/app/food-list/food-edit/food-edit.component.html
@@ -4,18 +4,18 @@
             <div class="row">
                 <div class="col-sm-5 form-group">
                     <label for="name">Nome</label>
-                    <input type="text" id="name" class="form-control">
+                    <input type="text" id="name" class="form-control" #nameInput>
                 </div>
 
                 <div class="col-sm-2 form-group">
                     <label for="amount">Quantidade</label>
-                    <input type="number" id="amount" class="form-control">
+                    <input type="number" id="amount" class="form-control" #amountInput>
                 </div>
             </div>
 
             <div class="row mt-2">
                 <div class="col-12">
-                    <button type="submit" class="btn btn-success mx-md-1">Adicionar</button>
+                    <button type="button" class="btn btn-success mx-md-1" (click)="addFood()">Adicionar</button>
                     <button type="button" class="btn btn-danger mx-md-1">Remover</button>
                     <button type="button" class="btn btn-primary mx-md-1">Limpar</button>
                 </div>
