--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,11 +8,11 @@
             <ul class="nav navbar-nav">
                 
                 <li class="nav-item">
-                    <a href="#" class="nav-link active">Marmitas</a>
+                    <a href="#" (click)="onSelect('packeds')" class="nav-link active">Marmitas</a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Lista de Alimentos</a>
+                    <a href="#" (click)="onSelect('food-list')" class="nav-link">Lista de Alimentos</a>
                 </li>
 
             </ul>
