feat: implement routing and authentication features, refactor food and packed components

--- a/src/app/packeds/packeds-list/packeds-list.component.html
+++ b/src/app/packeds/packeds-list/packeds-list.component.html
@@ -7,8 +7,7 @@
     <div class="col-12">
 
         <app-packeds-item *ngFor="let packedElement of packeds; index as i"
-        [packed]="packedElement"
-        (packedSelected)="onPackedSelected(packedElement)">
+        [packed]="packedElement">
 
         </app-packeds-item>
 
