--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,32 +1,32 @@
 <nav class="navbar navbar-expand navbar-light bg-light">
     <div class="container">
         <div class="navbar-header">
-            <a href="#" class="navbar-brand">Marmitaria</a>
+            <a routerLink="/" class="navbar-brand">Marmitaria</a>
         </div>
 
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 
                 <li class="nav-item">
-                    <a href="#" (click)="onSelect('packeds')" class="nav-link active">Marmitas</a>
+                    <a [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link">Marmitas</a> 
                 </li>
 
                 <li class="nav-item">
-                    <a href="#" (click)="onSelect('food-list')" class="nav-link">Lista de Alimentos</a>
+                    <a [routerLink]="['/food']" class="nav-link">Lista de Alimentos</a>
                 </li>
 
             </ul>
 
             <ul class="nav navbar-nav">
-                <a href="#" class="nav-link dropdown-toggle">Manutenção</a>
-
                 <li class="dropdown">
+                    <a class="nav-link dropdown-toggle" appDropdown>Manutenção</a>
+
                     <ul class="dropdown-menu">
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Incluir Dados</a>
+                            <a class="nav-link">Incluir Dados</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Buscar Dados</a>
+                            <a class="nav-link">Buscar Dados</a>
                         </li>
                     </ul>
                 </li>
