--- a/src/app/packeds/packeds-details/packeds-details.component.html
+++ b/src/app/packeds/packeds-details/packeds-details.component.html
@@ -14,26 +14,37 @@
 
 <div class="row">
     <div class="col-12">
-        <button type="button" class="btn btn-primary dropdown-toggle">
-            Opções <span class="carret"></span>
-        </button>
-
-        <ul class="dropdown-menu">
-            <li><a href="#">Para a lista de compras</a></li>
-            <li><a href="#">Editar Marmita</a></li>
-            <li><a href="#">Remover Marmita</a></li>
-        </ul>
+        <div class="dropdown">
+            <button type="button" class="btn btn-primary dropdown-toggle" appDropdown>
+                Opções <span class="carret"></span>
+            </button>
+    
+            <ul class="dropdown-menu">
+                <li><a (click)="addToFoodList()">Adicionar à lista de alimentos</a></li>
+                <li><a href="#">Editar Marmita</a></li>
+                <li><a href="#">Remover Marmita</a></li>
+            </ul>
+        </div>
     </div>
+    
 </div>
 
+<!-- Description -->
 <div class="row">
     <div class="col-12">
         <p>{{ packedSelected.description }}</p>
     </div>
 </div>
 
+<!-- Ingredients -->
 <div class="row">
     <div class="col-12">
-        <p>Ingredients</p>
+        <p>Ingredientes</p>
+
+        <ul class="list-group">
+            <li class="list-group-item" *ngFor="let ingredient of packedSelected.ingredients">
+                {{ ingredient.name }}
+            </li>
+        </ul>
     </div>
 </div>
