--- a/src/app/packeds/packeds.component.html
+++ b/src/app/packeds/packeds.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-5 mt-2">
-        <app-packeds-list (packedWasSelected)="selectedPacked = $event"></app-packeds-list>
+        <app-packeds-list></app-packeds-list>
     </div>
 
     <div class="col-md-7">
