feat: refactor routing and components for packeds, update authentication logic and styles

--- a/src/app/packeds/packeds-details/packeds-details.component.html
+++ b/src/app/packeds/packeds-details/packeds-details.component.html
@@ -21,8 +21,8 @@
     
             <ul class="dropdown-menu">
                 <li><a (click)="addToFoodList()">Adicionar à lista de alimentos</a></li>
-                <li><a href="#">Editar Marmita</a></li>
-                <li><a href="#">Remover Marmita</a></li>
+                <li><a>Editar Marmita</a></li>
+                <li><a >Remover Marmita</a></li>
             </ul>
         </div>
     </div>
