--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,8 @@
-<app-header (featureSelected)="onNavigate($event)"></app-header>
+<app-header></app-header>
 
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <!-- <app-packeds *ngIf="loadedFeature === 'packeds'"></app-packeds> -->
-            <!-- <app-food-list *ngIf="loadedFeature === 'food-list'"></app-food-list> -->
             <router-outlet></router-outlet>
         </div>
     </div>
