--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,11 +8,11 @@
             <ul class="nav navbar-nav">
                 
                 <li class="nav-item">
-                    <a [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link">Marmitas</a> 
+                    <a [routerLink]="['/packeds']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link">Marmitas</a> 
                 </li>
 
                 <li class="nav-item">
-                    <a [routerLink]="['/food']" class="nav-link">Lista de Alimentos</a>
+                    <a [routerLink]="['/food']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-link">Lista de Alimentos</a>
                 </li>
 
             </ul>
