--- a/src/app/packeds/packeds-list/packeds-item/packeds-item.component.html
+++ b/src/app/packeds/packeds-list/packeds-item/packeds-item.component.html
@@ -1,4 +1,4 @@
-<a href="#" class="list-group-item clearfix" (click)="onSelected()">
+<a class="list-group-item clearfix" style="cursor: pointer;" (click)="onSelected()">
 
     <div class="float-start">
         <h4 class="list-group-item-heading">{{ packed.name }}</h4>
